# tui-engine

./: .coveragerc  .gitignore  .gitignore-build  .gitignore.build  .pre-commit-config.yaml  CARD_SHUFFLING_SOLUTION.md  CHANGELOG.md  CONTRIBUTING.md  GITHUB_ACTIONS_COMPLETE.md  INTERNAL_ONLY.md  LICENSE  MANIFEST.in  Makefile  PROBLEM_SOLVED.md  README.md  RELEASE_NOTES.md  RENDERING_BACKLOG.md  SECURITY.md  SETUP.md  STATUS_REPORT.md  TEST_REDUNDANCY_ANALYSIS.md  UNIVERSAL_SPATIAL_AWARENESS_COMPLETE.md  VSCODE_TESTING_SETUP.md  card_shuffling_test.py  card_styles_demo.py  check_structure.py  corrected_quick_test.py  coverage.json  debug_borders.py  debug_card_refresh.py  debug_inspect.py  debug_monkey.py  debug_quick_test.py  debug_status.py  demo_autocomplete_adapter.py  demo_card_shuffling_solution.py  demo_date_time_adapter.py  demo_di_system.py  demo_file_path_adapter.py  demo_fundamental_features.py  (+52 more)
.github/: ACTIONS_DOCUMENTATION.md  CODEOWNERS  pull_request_template.md
.github/workflows/: ci.yml  performance.yml  publish.yml  release.yml  security.yml  test-logs-upload.yml
benchmarks/: test_performance.py
demos/: README.md  __init__.py  card_swap_results.json  comprehensive_demo.py  demo_alignment.py  demo_container.py  demo_form.py  demo_form_new.py  demo_new_architecture.py  demo_swap_cards.py  form_output.json  integration_test.py  main_menu.py  performance_benchmark.py  questionary_adapter_demo.py  real_world_employee_system.py  setup_env.sh  theme_integration_demo.py
docs/: API_REFERENCE.md  ARCHITECTURE.md  A_PLUS_IMPLEMENTATION_SUMMARY.md  CHANGELOG.md  COMPONENT_COVERAGE.md  CONSOLE_ISSUE_FIX.md  CONTRIBUTING.md  DEVELOPMENT_WORKFLOW.md  ENHANCED_DEMO_SUMMARY.md  IMPLEMENTATION_CLASSES.md  MIGRATION.md  MIGRATION_GUIDE.md  MIGRATION_SHIMS.md  PTK_WIDGETS.md  PTK_WIDGETS_REVIEW.md  QA_SIGNOFF.md  QUESTIONARY_COMPATIBILITY.md  SECURITY.md  TESTING_ARCHITECTURE.md  TESTING_BEST_PRACTICES.md  TESTING_FRAMEWORK.md  TESTING_IMPORTS.md  TEST_ARCHITECTURE.md  architecture-design.md  coverage-workflow.md  custom_component_guide.md  development-roadmap.md  implementation-plan.md  index.md  questionary_adapter_documentation.md  questionary_dependency_integration.md  questionary_integration_plan.md  themes_documentation.md
docs/deprecated/: RESTORE_POINT_2025-10-25.md  architecture_analysis.md  component_coverage_strategy.md  coverage_assessment.md  dependency_injection_analysis.md  dependency_injection_design.md  fallback_removal_analysis.md  import_mocking_analysis.md  new_test_infrastructure_guide.md  phase_2a_completion_summary.md  phase_2b_completion_summary.md  phase_3a_completion_summary.md  phase_3b_migration_checklist.md  test_migration_guide.md  unusual_mocking_analysis.md
examples/: README.md  advanced_forms.py  basic_usage.py  complete_demo.py  container_demo.py  first_working_prototype.py  interactive_demo.py  showcase_enhancements.py  test_enhanced_demo.py  verify_enhancements.py  working_examples.py
examples/card_shuffling_navigation/: README.md  architecture_demo.py  card_shuffling_demo.py  pagekey_demo.py  proper_card_demo.py  simple_demo.py  test_refresh.py
hr_data/: config.json
scripts/: check_no_bash.py  check_questionary_compatibility.py  coverage_tracker.py  generate_snapshot_header_form.py  inspect_pkg.py  prepare_build.py  test_ci_local.py  test_enhanced_checkbox_list.py  test_enhanced_password.py  test_enhanced_radio_list.py  test_enhanced_select.py  test_enhanced_text_input.py  test_questionary_adapter.py  test_themes.py
src/questionary_extended/: __init__.py  _questionary_proxy.py  _runtime.py  assembly.py  assembly_runtime.py  cli.py  components.py  page.py  page_runtime.py  prompts.py  prompts_base.py  prompts_core.py  prompts_extended.py  styles.py  utils.py  validators.py
src/tui_engine/: __init__.py  app.py  button_component.py  cli.py  component_base.py  container.py  defaults.py  di.py  element.py  events.py  focus.py  form_builder.py  input_component.py  interfaces.py  page.py  page_state.py  prompt_adapter.py  ptk_adapter.py  ptk_widget_factory.py  questionary_adapter.py  questionary_factory.py  radio_component.py  styles.py  text_element.py  themes.py  validation.py  widget_factories.py  widgets.py
tests/: README.md  __init__.py  conftest.py  conftest_questionary.py  logging_utils.py  test_adapter_integration.py  test_alignment.py  test_application_wrapper.py  test_apply_focus_via_di.py  test_button_adapter.py  test_checkbox_list_adapter.py  test_cli_commands.py  test_cli_integration.py  test_cli_wave2.py  test_cli_wave2_more.py  test_component_and_bridge_errors.py  test_component_and_prompts_wave1.py  test_component_deep_wave1.py  test_component_more_wave1.py  test_components.py  test_container.py  test_core_assembly_card_page.py  test_core_page_comprehensive.py  test_core_smoke_more.py  test_core_state_wave1.py  test_ctrlc_via_di.py  test_defaults.py  test_excluded_file_guard.py  test_float_container.py  test_focus.py  test_format_number_and_color.py  test_frame_style.py  test_integration.py  test_linting.py  test_notimplemented_and_style_merge_wave2.py  test_page_render.py  test_progress_tracker_alias.py  test_prompt_clear_redraw.py  test_prompts_additional_wave2.py  test_prompts_core_remaining_wave2.py  (+40 more)
tests/compatibility/: test_bridge_smoke.py  test_questionary_api_equivalence.py  test_questionary_compat.py
tests/helpers/: __init__.py  path_utils.py  questionary_helpers.py  test_helpers.py
tests/integration/: __init__.py
tests/snapshots/: header_form.txt
tests/unit/: __init__.py  test_assembly_core_pytest.py  test_cli.py  test_cli_additional.py  test_cli_callbacks.py  test_cli_noninteractive.py  test_cli_py.py  test_component_basic_coverage.py  test_component_core.py  test_component_full.py  test_component_full_coverage_pytest.py  test_component_more.py  test_components.py  test_components_extended.py  test_core_assembly.py  test_core_card.py  test_core_component.py  test_core_smoke.py  (+48 more)
tools/: cli_coverage_runner.py  collect_cli_subprocess_coverage.py  dump_demo_alignment.py  tmp_check_module.py
(+41 files in other folders)
