[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[project]
name = "questionary-extended"
version = "0.1.0"
description = "Advanced extensions for the questionary CLI prompt library"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Your Name", email = "your.email@example.com"},
]
maintainers = [
    {name = "Your Name", email = "your.email@example.com"},
]
keywords = ["cli", "prompt", "terminal", "questionary", "interactive", "tui"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: User Interfaces",
    "Topic :: System :: Shells",
    "Topic :: Terminals",
    "Topic :: Utilities",
    "Typing :: Typed",
]
dependencies = [
    "questionary>=2.0.1",
    "prompt-toolkit>=3.0.43",
    "rich>=13.7.0",
    "click>=8.1.7",
    "pydantic>=2.5.0",
    "python-dateutil>=2.8.2",
    "colorama>=0.4.6",
    "typing-extensions>=4.8.0; python_version<'3.10'",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.3",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.21.1",
    "pytest-mock>=3.12.0",
    "pytest-xdist>=3.4.0",
    "coverage>=7.3.2",
    "pre-commit>=3.5.0",
]
docs = [
    "sphinx>=7.2.6",
    "sphinx-rtd-theme>=1.3.0",
    "mkdocs>=1.5.3",
    "mkdocs-material>=9.4.8",
]
quality = [
    "black>=23.11.0",
    "isort>=5.12.0",
    "flake8>=6.1.0",
    "mypy>=1.7.1",
    "ruff>=0.1.6",
]

[project.urls]
Homepage = "https://github.com/yourusername/questionary-extended"
Repository = "https://github.com/yourusername/questionary-extended"
Documentation = "https://questionary-extended.readthedocs.io"
"Bug Tracker" = "https://github.com/yourusername/questionary-extended/issues"
Changelog = "https://github.com/yourusername/questionary-extended/blob/main/CHANGELOG.md"

[project.scripts]
qext = "questionary_extended.cli:main"

[tool.poetry]
name = "questionary-extended"
version = "0.1.0"
description = "Advanced extensions for the questionary CLI prompt library"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
license = "MIT"
homepage = "https://github.com/yourusername/questionary-extended"
repository = "https://github.com/yourusername/questionary-extended"
documentation = "https://questionary-extended.readthedocs.io"
keywords = ["cli", "prompt", "terminal", "questionary", "interactive"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Shells",
    "Topic :: Terminals",
]
packages = [{include = "questionary_extended", from = "src"}]

[tool.poetry.dependencies]
python = "^3.8"
questionary = "^2.0.1"
prompt-toolkit = "^3.0.43"
rich = "^13.7.0"
click = "^8.1.7"
pydantic = "^2.5.0"
python-dateutil = "^2.8.2"
colorama = "^0.4.6"
typing-extensions = "^4.8.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
pytest-cov = "^4.1.0"
pytest-asyncio = "^0.21.1"
black = "^23.11.0"
isort = "^5.12.0"
flake8 = "^6.1.0"
mypy = "^1.7.1"
pre-commit = "^3.5.0"
sphinx = "^7.2.6"
sphinx-rtd-theme = "^1.3.0"
mkdocs = "^1.5.3"
mkdocs-material = "^9.4.8"

[tool.poetry.group.test.dependencies]
pytest-mock = "^3.12.0"
pytest-xdist = "^3.4.0"
coverage = "^7.3.2"

[tool.poetry.scripts]
qext = "questionary_extended.cli:main"

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88
known_first_party = ["questionary_extended"]

[tool.mypy]
python_version = "3.8"
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
strict_optional = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "--cov=questionary_extended --cov-report=html --cov-report=term-missing"

[tool.coverage.run]
source = ["src/questionary_extended"]
omit = ["*/tests/*", "*/test_*.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
]